Working abalone example in NB

--- a/nbs/init.ipynb
+++ b/nbs/init.ipynb
@@ -26,8 +26,6 @@
     "# export\n",
     "\n",
     "from pathlib import Path\n",
-    "import sys\n",
-    "import shutil\n",
     "\n",
     "from fastcore.script import Param, call_parse"
    ]
@@ -55,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export \n",
+    "# export\n",
     "\n",
     "env_file_blank = \"\"\"export USER=\n",
     "export ODBC_DRIVER=\n",
@@ -77,18 +75,19 @@
    "source": [
     "# export\n",
     "\n",
+    "\n",
     "def write_env_file(sciflow_dir: Path = None):\n",
     "    if sciflow_dir is None:\n",
-    "        sciflow_dir = Path('~/.sciflow').expanduser()\n",
-    "    env_path = Path(sciflow_dir, 'env').resolve()\n",
+    "        sciflow_dir = Path(\"~/.sciflow\").expanduser()\n",
+    "    env_path = Path(sciflow_dir, \"env\").resolve()\n",
     "    if not env_path.exists():\n",
     "        if not sciflow_dir.exists():\n",
     "            os.mkdir(sciflow_dir)\n",
-    "        with open(env_path, 'w') as env_file:\n",
+    "        with open(env_path, \"w\") as env_file:\n",
     "            env_file.write(env_file_blank)\n",
-    "        print(f'Wrote new SciFlow environment file to: {env_path}')\n",
+    "        print(f\"Wrote new SciFlow environment file to: {env_path}\")\n",
     "    else:\n",
-    "        print(f'Skipping SciFlow environment file creation - already exists')"
+    "        print(f\"Skipping SciFlow environment file creation - already exists\")"
    ]
   },
   {
@@ -97,11 +96,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "examples_root = Path('../examples')\n",
-    "project_root = Path('../')\n",
-    "sciflow_dir = Path('test/.sciflow')\n",
-    "test_root = Path('test')\n",
-    "env_path = os.path.join(sciflow_dir, 'env')"
+    "examples_root = Path(\"../examples\")\n",
+    "project_root = Path(\"../\")\n",
+    "sciflow_dir = Path(\"test/.sciflow\")\n",
+    "test_root = Path(\"test\")\n",
+    "env_path = os.path.join(sciflow_dir, \"env\")"
    ]
   },
   {
@@ -121,30 +120,30 @@
     }
    ],
    "source": [
-    "if Path('test/.sciflow/env').exists():\n",
-    "    Path('test/.sciflow/env').unlink()\n",
+    "if Path(\"test/.sciflow/env\").exists():\n",
+    "    Path(\"test/.sciflow/env\").unlink()\n",
     "\n",
     "write_env_file(sciflow_dir)\n",
     "\n",
-    "with open(env_path, 'r') as env_file:\n",
-    "        env_file_contents = env_file.read()\n",
-    "assert(env_file_contents == env_file_blank)\n",
+    "with open(env_path, \"r\") as env_file:\n",
+    "    env_file_contents = env_file.read()\n",
+    "assert env_file_contents == env_file_blank\n",
     "\n",
     "write_env_file()\n",
     "\n",
-    "with open(env_path, 'r') as env_file:\n",
-    "        env_file_contents = env_file.read()\n",
-    "assert(env_file_contents == env_file_blank)\n",
+    "with open(env_path, \"r\") as env_file:\n",
+    "    env_file_contents = env_file.read()\n",
+    "assert env_file_contents == env_file_blank\n",
     "\n",
-    "with open(env_path, 'w') as env_file:\n",
+    "with open(env_path, \"w\") as env_file:\n",
     "    env_file.write(\"test\")\n",
     "write_env_file(sciflow_dir)\n",
-    "with open(env_path, 'r') as env_file:\n",
-    "        env_file_contents = env_file.read()\n",
-    "assert(\"test\" == env_file_contents)\n",
-    "        \n",
-    "Path('test/.sciflow/env').unlink()\n",
-    "assert(not Path('test/.sciflow/env').exists())\n",
+    "with open(env_path, \"r\") as env_file:\n",
+    "    env_file_contents = env_file.read()\n",
+    "assert \"test\" == env_file_contents\n",
+    "\n",
+    "Path(\"test/.sciflow/env\").unlink()\n",
+    "assert not Path(\"test/.sciflow/env\").exists()\n",
     "\n",
     "write_env_file(sciflow_dir)"
    ]
@@ -157,11 +156,12 @@
    "source": [
     "# export\n",
     "\n",
+    "\n",
     "def read_env_file(sciflow_dir: Path = None):\n",
     "    if sciflow_dir is None:\n",
-    "        sciflow_dir = Path('~/.sciflow').expanduser()\n",
-    "    env_path = Path(sciflow_dir, 'env').resolve()\n",
-    "    with open(env_path, 'r') as env_file:\n",
+    "        sciflow_dir = Path(\"~/.sciflow\").expanduser()\n",
+    "    env_path = Path(sciflow_dir, \"env\").resolve()\n",
+    "    with open(env_path, \"r\") as env_file:\n",
     "        lines = env_file.readlines()\n",
     "    return lines"
    ]
@@ -172,17 +172,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_lines_wout_ppath = [\"export USER='sciflow'\\n\",\n",
-    " 'export ODBC_DRIVER=/opt/odbc/xyz.so\\n',\n",
-    " 'export SCIFLOW_BUCKET_TABLE_ALIAS=somebucket\\n']\n",
+    "env_lines_wout_ppath = [\n",
+    "    \"export USER='sciflow'\\n\",\n",
+    "    \"export ODBC_DRIVER=/opt/odbc/xyz.so\\n\",\n",
+    "    \"export SCIFLOW_BUCKET_TABLE_ALIAS=somebucket\\n\",\n",
+    "]\n",
     "\n",
-    "env_lines_w_1_ppath = [\"export USER='sciflow'\\n\",\n",
-    " f'export PYTHONPATH=$PYTHONPATH:{str(project_root.resolve())}\\n', \n",
-    " 'export SCIFLOW_BUCKET_TABLE_ALIAS=somebucket\\n']\n",
+    "env_lines_w_1_ppath = [\n",
+    "    \"export USER='sciflow'\\n\",\n",
+    "    f\"export PYTHONPATH=$PYTHONPATH:{str(project_root.resolve())}\\n\",\n",
+    "    \"export SCIFLOW_BUCKET_TABLE_ALIAS=somebucket\\n\",\n",
+    "]\n",
     "\n",
-    "env_lines_w_2_ppath = [\"export USER='sciflow'\\n\",\n",
-    " f'export PYTHONPATH=$PYTHONPATH:{str(project_root.resolve())}:{str(examples_root.resolve())}\\n', \n",
-    " 'export SCIFLOW_BUCKET_TABLE_ALIAS=somebucket\\n']"
+    "env_lines_w_2_ppath = [\n",
+    "    \"export USER='sciflow'\\n\",\n",
+    "    f\"export PYTHONPATH=$PYTHONPATH:{str(project_root.resolve())}:{str(examples_root.resolve())}\\n\",\n",
+    "    \"export SCIFLOW_BUCKET_TABLE_ALIAS=somebucket\\n\",\n",
+    "]"
    ]
   },
   {
@@ -193,23 +199,28 @@
    "source": [
     "# export\n",
     "\n",
+    "\n",
     "def edit_pythonpath(env_lines, dir_to_add: Path):\n",
     "    dir_str = str(dir_to_add.resolve())\n",
-    "    existing_ppath = [p for p in env_lines if p.find('PYTHONPATH') > -1]\n",
-    "    \n",
+    "    existing_ppath = [p for p in env_lines if p.find(\"PYTHONPATH\") > -1]\n",
+    "\n",
     "    if len(existing_ppath) == 0:\n",
     "        new_line = f\"export PYTHONPATH=$PYTHONPATH:{dir_str}\\n\"\n",
     "        env_lines.append(new_line)\n",
-    "        new_text = ''.join(env_lines)\n",
+    "        new_text = \"\".join(env_lines)\n",
     "    elif len(existing_ppath) == 1:\n",
     "        prev_line = existing_ppath[0]\n",
     "        if prev_line.find(dir_str) == -1:\n",
-    "            new_line = existing_ppath[0].replace('$PYTHONPATH:', f'$PYTHONPATH:{dir_str}:')\n",
-    "            new_text = ''.join(env_lines).replace(prev_line, new_line)\n",
+    "            new_line = existing_ppath[0].replace(\n",
+    "                \"$PYTHONPATH:\", f\"$PYTHONPATH:{dir_str}:\"\n",
+    "            )\n",
+    "            new_text = \"\".join(env_lines).replace(prev_line, new_line)\n",
     "        else:\n",
-    "            new_text = ''.join(env_lines)\n",
+    "            new_text = \"\".join(env_lines)\n",
     "    else:\n",
-    "        raise ValueError(\"Env file is malformed - only 1 PYTHONPATH entry should be present\")\n",
+    "        raise ValueError(\n",
+    "            \"Env file is malformed - only 1 PYTHONPATH entry should be present\"\n",
+    "        )\n",
     "    return new_text"
    ]
   },
@@ -221,14 +232,15 @@
    "source": [
     "# export\n",
     "\n",
+    "\n",
     "def write_edited_pythonpath(project_root: Path, sciflow_dir: Path = None):\n",
     "    if sciflow_dir is None:\n",
-    "        sciflow_dir = Path('~/.sciflow').expanduser()\n",
-    "    env_path = Path(sciflow_dir, 'env').resolve()\n",
+    "        sciflow_dir = Path(\"~/.sciflow\").expanduser()\n",
+    "    env_path = Path(sciflow_dir, \"env\").resolve()\n",
     "    env_lines = read_env_file(sciflow_dir)\n",
     "    new_text = edit_pythonpath(env_lines, project_root)\n",
-    "    with open(env_path, 'w') as env_file:\n",
-    "            env_file.write(new_text)"
+    "    with open(env_path, \"w\") as env_file:\n",
+    "        env_file.write(new_text)"
    ]
   },
   {
@@ -237,16 +249,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_vars = sorted(['USER',\n",
-    " 'ODBC_DRIVER',\n",
-    " 'ODBC_USER',\n",
-    " 'ODBC_PWD',\n",
-    " 'ODBC_PORT',\n",
-    " 'ODBC_HOST',\n",
-    " 'SSL_CERTS',\n",
-    " 'SCIFLOW_BUCKET',\n",
-    " 'SCIFLOW_BUCKET_TABLE_ALIAS',\n",
-    " 'PYTHONPATH'])"
+    "env_vars = sorted(\n",
+    "    [\n",
+    "        \"USER\",\n",
+    "        \"ODBC_DRIVER\",\n",
+    "        \"ODBC_USER\",\n",
+    "        \"ODBC_PWD\",\n",
+    "        \"ODBC_PORT\",\n",
+    "        \"ODBC_HOST\",\n",
+    "        \"SSL_CERTS\",\n",
+    "        \"SCIFLOW_BUCKET\",\n",
+    "        \"SCIFLOW_BUCKET_TABLE_ALIAS\",\n",
+    "        \"PYTHONPATH\",\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -256,8 +272,12 @@
    "outputs": [],
    "source": [
     "env_lines = read_env_file(sciflow_dir)\n",
-    "observed_vars = [x.split('=')[0].split(' ')[1] for x in edit_pythonpath(env_lines, examples_root).split('\\n') if x.find('export') > -1]\n",
-    "assert(env_vars == sorted(observed_vars))"
+    "observed_vars = [\n",
+    "    x.split(\"=\")[0].split(\" \")[1]\n",
+    "    for x in edit_pythonpath(env_lines, examples_root).split(\"\\n\")\n",
+    "    if x.find(\"export\") > -1\n",
+    "]\n",
+    "assert env_vars == sorted(observed_vars)"
    ]
   },
   {
@@ -279,14 +299,17 @@
     "\n",
     "\n",
     "@call_parse\n",
-    "def sciflow_init(project_root: Param(\"The root directory of the project\", Path) = None, sciflow_dir: Param(\"The sciflow env directory\", Path) = None):\n",
+    "def sciflow_init(\n",
+    "    project_root: Param(\"The root directory of the project\", Path) = None,\n",
+    "    sciflow_dir: Param(\"The sciflow env directory\", Path) = None,\n",
+    "):\n",
     "    if project_root is None:\n",
-    "        project_root = Path('.').resolve()\n",
+    "        project_root = Path(\".\").resolve()\n",
     "    # TODO - Get latest templates files from web - if has internet connection\n",
-    "    \n",
+    "\n",
     "    # Create sciflow env file if it doesn't exist\n",
     "    write_env_file(sciflow_dir)\n",
-    "    \n",
+    "\n",
     "    # Add project root to PYTHONPATH environment variable\n",
     "    write_edited_pythonpath(project_root, sciflow_dir)"
    ]
@@ -314,27 +337,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(env_path, 'r') as env_file:\n",
+    "with open(env_path, \"r\") as env_file:\n",
     "    env_file_contents = env_file.readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(f\"export PYTHONPATH=$PYTHONPATH:{str(examples_root.resolve())}:{str(test_root.resolve())}\" == env_file_contents[-1].strip())"
+    "assert (\n",
+    "    f\"export PYTHONPATH=$PYTHONPATH:{str(examples_root.resolve())}:{str(test_root.resolve())}\"\n",
+    "    == env_file_contents[-1].strip()\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(env_path, 'w') as env_file:\n",
-    "    env_file.write(''.join(env_file_contents[:-1]))"
+    "with open(env_path, \"w\") as env_file:\n",
+    "    env_file.write(\"\".join(env_file_contents[:-1]))"
    ]
   }
  ],
