Added to_sagemaker nb

--- a/examples/abalone.ipynb
+++ b/examples/abalone.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "# Basic Sagemaker Pipeline Example - Abalone "
+    "# `sciflow` more detailed ML example - Abalone Dataset"
    ]
   },
   {
@@ -57,7 +55,6 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "\n",
     "\n",
     "import json\n",
     "import os\n",
