Changed FuncDetail __repr__ to be more legible

--- a/examples/abalone.ipynb
+++ b/examples/abalone.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "# export\n",
     "\n",
-    "bucket = os.environ['SCIFLOW_BUCKET']\n",
+    "bucket = os.environ[\"SCIFLOW_BUCKET\"]\n",
     "dataset_key_prefix = \"datasets/abalone\"\n",
     "data_path = f\"s3://{bucket}/{dataset_key_prefix}/abalone-dataset.csv\"\n",
     "hyperparameters = {\"max_iter\": 20}\n",
