--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -126,6 +126,11 @@
     "        self.generic_visit(node)\n",
     "\n",
     "\n",
+    "import pprint\n",
+    "\n",
+    "pp = pprint.PrettyPrinter(indent=4, width=120, compact=True)\n",
+    "\n",
+    "\n",
     "@dataclass\n",
     "class FuncDetails:\n",
     "    name: str\n",
@@ -133,12 +138,33 @@
     "    args: str\n",
     "    has_return: bool\n",
     "    return_stmt: str\n",
-    "    code: str"
+    "    code: str\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return pp.pformat(\n",
+    "            f\"FuncDetails(name={self.name},args={self.args},has_return={self.has_return}):\\n{self.code.strip()}\"\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "some_func = \"\"\"\n",
+    "def some_func():\n",
+    "    print 1\n",
+    "\"\"\"\n",
+    "assert (\n",
+    "    FuncDetails(\"a\", None, \"an_arg\", True, \"return True\", some_func).__repr__()\n",
+    "    == \"'FuncDetails(name=a,args=an_arg,has_return=True):\\\\ndef some_func():\\\\n    print 1'\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +322,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('FuncDetails(name=first,args=some_params,has_return=False):\\n'\n",
+       "  'def first(some_params: int):\\n'\n",
+       "  '    \"\"\"\\n'\n",
+       "  '    This the entrypoint.\\n'\n",
+       "  '\\n'\n",
+       "  '    :param some_params: this is a first param\\n'\n",
+       "  '    :returns: this is a description of what is returned\\n'\n",
+       "  '    \"\"\"\\n'\n",
+       "  '    print(some_params)'),\n",
+       " ('FuncDetails(name=preprocess,args=input_path,has_return=False):\\n'\n",
+       "  'def preprocess(input_path: str):\\n'\n",
+       "  '    \"\"\"Pre-process the input data\"\"\"\\n'\n",
+       "  '    import time\\n'\n",
+       "  '\\n'\n",
+       "  '    print(f\"Preprocessing input data from {input_path}...\")\\n'\n",
+       "  '    time.sleep(1)'),\n",
+       " ('FuncDetails(name=train,args=input_path,model_path,has_return=False):\\n'\n",
+       "  'def train(input_path: str, model_path: str):\\n'\n",
+       "  '    \"\"\"Train the model\"\"\"\\n'\n",
+       "  '    import time\\n'\n",
+       "  '\\n'\n",
+       "  '    print(f\"Training {model_path} on {input_path}...\")\\n'\n",
+       "  '    time.sleep(1)'),\n",
+       " ('FuncDetails(name=last,args=,has_return=True):\\n'\n",
+       "  'def last():\\n'\n",
+       "  '    \"\"\"\\n'\n",
+       "  '    Clean up and close connections\"\"\"\\n'\n",
+       "  '    one = {\"one\": 1}\\n'\n",
+       "  '    return one')]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract_steps(test_module)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,6 +444,7 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
