--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,11 @@
     "\n",
     "\n",
     "import os\n",
-    "import subprocess\n",
-    "import sys\n",
     "from pathlib import Path\n",
     "\n",
-    "from fastcore.script import Param, call_parse\n",
-    "from nbdev.export import find_default_export, get_config, nbglob, read_nb"
+    "from nbdev.export import find_default_export, get_config, read_nb\n",
+    "\n",
+    "from sciflow.parse_module import extract_steps"
    ]
   },
   {
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,10 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "steps = extract_steps(test_module)"
+   ]
   }
  ],
  "metadata": {
