[WIP] starting to_sagemaker pipeline generation code

--- a/nbs/data_handler.ipynb
+++ b/nbs/data_handler.ipynb
@@ -80,9 +80,10 @@
     "class ParamMeta:\n",
     "    instance_type: type\n",
     "    is_scalar: bool\n",
-    "    has_metaflow_param: bool\n",
     "    is_json_type: bool\n",
-    "    persist_type: str"
+    "    persist_type: str\n",
+    "    has_metaflow_param: bool\n",
+    "    has_sagemaker_param: bool"
    ]
   },
   {
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,57 +224,63 @@
     "            param_meta[key] = ParamMeta(\n",
     "                instance_type=type(val),\n",
     "                is_scalar=True,\n",
-    "                has_metaflow_param=True,\n",
     "                is_json_type=False,\n",
     "                persist_type=\"pickle\",\n",
+    "                has_metaflow_param=True,\n",
+    "                has_sagemaker_param = True\n",
     "            )\n",
     "        elif any([isinstance(val, t) for t in supported_args]):\n",
     "            param_meta[key] = ParamMeta(\n",
     "                instance_type=type(val),\n",
     "                is_scalar=False,\n",
-    "                has_metaflow_param=True,\n",
     "                is_json_type=True,\n",
     "                persist_type=\"pickle\",\n",
+    "                has_metaflow_param=True,\n",
+    "                has_sagemaker_param = False\n",
     "            )\n",
     "        elif any([isinstance(val, t) for t in supported_conversion_args]):\n",
     "            if isinstance(val, np.ndarray):\n",
     "                param_meta[key] = ParamMeta(\n",
     "                    instance_type=type(val),\n",
     "                    is_scalar=False,\n",
-    "                    has_metaflow_param=False,\n",
     "                    is_json_type=False,\n",
     "                    persist_type=\"numpy\",\n",
+    "                    has_metaflow_param=False,\n",
+    "                    has_sagemaker_param = False\n",
     "                )\n",
     "            elif isinstance(val, pd.Series) or isinstance(val, pd.DataFrame):\n",
     "                param_meta[key] = ParamMeta(\n",
     "                    instance_type=type(val),\n",
     "                    is_scalar=False,\n",
-    "                    has_metaflow_param=False,\n",
     "                    is_json_type=False,\n",
     "                    persist_type=\"pandas\",\n",
+    "                    has_metaflow_param=False,\n",
+    "                    has_sagemaker_param = False\n",
     "                )\n",
     "            elif isinstance(val, Path):\n",
     "                param_meta[key] = ParamMeta(\n",
     "                    instance_type=type(val),\n",
     "                    is_scalar=False,\n",
-    "                    has_metaflow_param=True,\n",
     "                    is_json_type=False,\n",
     "                    persist_type=\"pickle\",\n",
+    "                    has_metaflow_param=True,\n",
+    "                    has_sagemaker_param = False\n",
     "                )\n",
     "        else:\n",
     "            param_meta[key] = ParamMeta(\n",
     "                instance_type=type(val),\n",
     "                is_scalar=False,\n",
-    "                has_metaflow_param=False,\n",
     "                is_json_type=False,\n",
     "                persist_type=\"unsupported\",\n",
+    "                has_metaflow_param=False,\n",
+    "                has_sagemaker_param = False\n",
     "            )\n",
     "    return param_meta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +329,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(param_meta[\"int_param\"].has_metaflow_param)\n",
+    "assert(param_meta[\"int_param\"].has_sagemaker_param)\n",
+    "assert(param_meta[\"str_param\"].has_metaflow_param)\n",
+    "assert(param_meta[\"str_param\"].has_sagemaker_param)\n",
+    "assert(param_meta[\"float_param\"].has_metaflow_param)\n",
+    "assert(param_meta[\"float_param\"].has_sagemaker_param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(param_meta[\"list_param\"].has_metaflow_param)\n",
+    "assert(not param_meta[\"list_param\"].has_sagemaker_param)\n",
+    "assert(param_meta[\"dict_param\"].has_metaflow_param)\n",
+    "assert(not param_meta[\"dict_param\"].has_sagemaker_param)\n",
+    "assert(param_meta[\"input_path\"].has_metaflow_param)\n",
+    "assert(not param_meta[\"input_path\"].has_sagemaker_param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +377,7 @@
        "dict_keys(['traffic_percent', 'workers', 'model_level', 'min_date'])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,23 +388,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ParamMeta(instance_type=<class 'int'>, is_scalar=True, has_metaflow_param=True, is_json_type=False, persist_type='pickle')"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "param_meta[\"traffic_percent\"]"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
