--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,10 +30,23 @@
     "\n",
     "import os\n",
     "from pathlib import Path\n",
+    "from typing import Any, Dict, Iterable\n",
     "\n",
     "from nbdev.export import find_default_export, get_config, read_nb\n",
     "\n",
-    "from sciflow.parse_module import extract_steps"
+    "from sciflow.data_handler import extract_param_meta\n",
+    "from sciflow.params import params_as_dict\n",
+    "from sciflow.parse_module import FuncDetails, extract_steps\n",
+    "from sciflow.utils import prepare_env"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sciflow.to_metaflow import titleize, extract_module_only, get_module_name, get_flow_path"
    ]
   },
   {
@@ -42,9 +55,9 @@
    "source": [
     "# Sciflow Notebook to Sagemaker Pipeline\n",
     "\n",
-    "> Converts from a `sciflow` format notebook to a `sagemaker` pipeline. Note: currently this is done via an intermediary step of creating a `metaflow` flow first. *This is temporary and just for convenience as that transformation was developed first.*\n",
+    "> Converts from a `sciflow` format notebook to a `sagemaker` pipeline. \n",
     "\n",
-    "Supported features:\n",
+    "Currently Supported features:\n",
     "\n",
     "* Linear/sequential DAGs\n",
     "* Simple `Parameters`"
@@ -52,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,12 +77,328 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flow_path = get_flow_path(nb_path, \"sagemaker\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Path('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_clustering.py')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "steps = extract_steps(test_module)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def nb_to_sagemaker_pipeline(nb_path: Path, flow_path: Path, silent=True, track_experiment=True):\n",
+    "    nb = read_nb(nb_path)\n",
+    "    lib_name = get_config().get(\"lib_name\")\n",
+    "    module_name = find_default_export(nb[\"cells\"])\n",
+    "    if not module_name:\n",
+    "        return\n",
+    "    module_name = module_name\n",
+    "    path_sep_module_name = module_name.replace(\".\", \"/\")\n",
+    "    nb_name = os.path.basename(nb_path)\n",
+    "    exported_module = os.path.join(\n",
+    "        get_config().path(\"lib_path\"), f\"{path_sep_module_name}.py\"\n",
+    "    )\n",
+    "    steps = extract_steps(exported_module)\n",
+    "    if len(steps) == 0:\n",
+    "        print('Skipping sagemaker conversion - not steps found')\n",
+    "        return\n",
+    "    params = params_as_dict(nb_path)\n",
+    "    if len(params) == 0:\n",
+    "        print(f\"No params cell found for: {os.path.basename(nb_path)}\")\n",
+    "    pipeline_class_name = f\"{titleize(extract_module_only(module_name))}Pipeline\"\n",
+    "    write_pipeline_to_files(\n",
+    "        flow_path,\n",
+    "        pipeline_class_name,\n",
+    "        lib_name,\n",
+    "        module_name,\n",
+    "        steps,\n",
+    "        params,\n",
+    "        track_experiment,\n",
+    "    )\n",
+    "    if not silent:\n",
+    "        print(\n",
+    "            f\"Converted {nb_name} to {pipeline_class_name} in: {os.path.basename(flow_path)}\"\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  export\n",
+    "\n",
+    "\n",
+    "def write_pipeline_to_files(\n",
+    "    flow_path: Path,\n",
+    "    pipeline_class_name: str,\n",
+    "    lib_name: str,\n",
+    "    module_name: str,\n",
+    "    steps: Iterable[FuncDetails],\n",
+    "    params: dict,\n",
+    "    track_experiment: bool,\n",
+    "):\n",
+    "    if not os.path.exists(flow_path.parent):\n",
+    "        os.mkdir(flow_path.parent)\n",
+    "    fq_module_name = f\"{lib_name}.{module_name}\"\n",
+    "    param_meta = extract_param_meta(fq_module_name, params)\n",
+    "    with open(flow_path, \"w\") as flow_file:\n",
+    "        flow_file.write(\"#!/usr/bin/env python\\n\")\n",
+    "        flow_file.write(\"# coding=utf-8\\n\")\n",
+    "        flow_file.write(\"# SCIFLOW GENERATED FILE - EDIT COMPANION NOTEBOOK\\n\")\n",
+    "            \n",
+    "        flow_file.write(\"import os\\n\")\n",
+    "        \n",
+    "        flow_file.write(\"import sagemaker\\n\")\n",
+    "        flow_file.write(\"from sagemaker.session import Session\\n\")\n",
+    "        flow_file.write(\"from sagemaker.workflow.pipeline import Pipeline\\n\")\n",
+    "        \n",
+    "        has_train_step = any([s.name.startswith(n) for n in['fit', 'train'] for s in steps])\n",
+    "        has_processing_step = sum([s.name.startswith(n) for n in['fit', 'train'] for s in steps]) != len(steps)\n",
+    "        \n",
+    "        if has_train_step and has_processing_step:\n",
+    "            flow_file.write(\"from sagemaker.workflow.steps import ProcessingStep, TrainingStep\\n\")\n",
+    "        if has_processing_step:\n",
+    "            flow_file.write(\"from sagemaker.processing import ScriptProcessor, ProcessingInput, ProcessingOutput\\n\")\n",
+    "            flow_file.write(\"from sagemaker.workflow.pipeline import Pipeline\\n\")\n",
+    "        if has_train_step:\n",
+    "            flow_file.write(\"from sagemaker.inputs import TrainingInput\\n\")\n",
+    "            flow_file.write(\"from sagemaker.estimator import Estimator\\n\")\n",
+    "                  \n",
+    "        has_sm_param = any((p.has_sagemaker_param for p in param_meta.values()))\n",
+    "        if has_sm_param:\n",
+    "            instance_types = [p.instance_type for p in param_meta.values()]\n",
+    "            sm_params_import = \"from sagemaker.workflow.parameters import \"\n",
+    "            if int in instance_types:\n",
+    "                sm_params_import += \", ParameterInteger\"\n",
+    "            if float in instance_types:\n",
+    "                sm_params_import += \", ParameterFloat\"\n",
+    "            if str in instance_types:\n",
+    "                sm_params_import += \", ParameterString\"\n",
+    "\n",
+    "            flow_file.write(sm_params_import + \"\\n\")\n",
+    "        \n",
+    "        flow_file.write(\"\\n\")\n",
+    "        flow_file.write(f\"from {fq_module_name} import {', '.join([s.name for s in steps])}\\n\")\n",
+    "        if len(params) > 0:\n",
+    "            flow_file.write(\n",
+    "                f\"from {fq_module_name} import {', '.join(params.keys())}\\n\"\n",
+    "            )\n",
+    "\n",
+    "        flow_file.write(f\"\\n\\nclass {pipeline_class_name}():\\n\")\n",
+    "        single_indent = \"    \"\n",
+    "        write_params(flow_file, param_meta, single_indent)\n",
+    "        flow_file.write(\"\\n\")\n",
+    "        write_steps(\n",
+    "            fq_module_name,\n",
+    "            flow_file,\n",
+    "            steps,\n",
+    "            param_meta,\n",
+    "            single_indent,\n",
+    "            track_experiment,\n",
+    "        )\n",
+    "        flow_file.write(\"\\n\")\n",
+    "\n",
+    "        flow_file.write('if __name__ == \"__main__\":\\n')\n",
+    "        flow_file.write(f\"{single_indent}{pipeline_class_name}()\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def write_observers(lib_name, flow_file, module_name, bucket_name, project):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def write_track_flow(flow_file, track_experiment):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  export\n",
+    "\n",
+    "\n",
+    "def write_params(flow_file, param_meta, single_indent):\n",
+    "    for param in param_meta.keys():\n",
+    "        if param_meta[param].instance_type == int:\n",
+    "            flow_file.write(\n",
+    "                f\"{single_indent}{param} = ParameterInteger(name='{param}', default_value={param})\\n\"\n",
+    "            )\n",
+    "        elif param_meta[param].instance_type == float:\n",
+    "            flow_file.write(\n",
+    "                f\"{single_indent}{param} = ParameterFloat(name='{param}', default_value={param})\\n\"\n",
+    "            )\n",
+    "        elif param_meta[param].instance_type == str:\n",
+    "            flow_file.write(\n",
+    "                f\"{single_indent}{param} = ParameterString(name='{param}', default_value={param})\\n\"\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_script_processor(flow_file):\n",
+    "    flow_file.write(\"\"\"\n",
+    "        script_processor = ScriptProcessor(\n",
+    "                command=['python3'],\n",
+    "                image_uri=\"141502667606.dkr.ecr.eu-west-1.amazonaws.com/sagemaker-scikit-learn:0.23-1-cpu-py3\",\n",
+    "                role=self.role,\n",
+    "                instance_count=1,\n",
+    "                instance_type=\"ml.m5.xlarge\",\n",
+    "                sagemaker_session=self.sagemaker_session,\n",
+    "                env={'AWS_DEFAULT_REGION': self.region},\n",
+    "                base_job_name=f'processing-job/{__file__}'\n",
+    "        )\n",
+    "        \"\"\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def format_arg(arg, param_meta):\n",
+    "    if arg in param_meta and not param_meta[arg].has_metaflow_param:\n",
+    "        result = arg\n",
+    "    else:\n",
+    "        result = \"self.\" + arg\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def write_steps(\n",
+    "    fq_module_name, flow_file, steps, param_meta, single_indent, track_experiment\n",
+    "):\n",
+    "    step_names = [s.name for s in steps]\n",
+    "    for i, step in enumerate(steps):\n",
+    "        flow_file.write(f\"{single_indent}def {step.name}(self):\\n\")\n",
+    "        if step.docstring:\n",
+    "            flow_file.write(f\"{indent_multiline(step.docstring, 2)}\\n\")\n",
+    "        # Processing step\n",
+    "        if not any([step.name.startswith(n) for n in ('fit', 'train')]):\n",
+    "            write_script_processor(flow_file)\n",
+    "            \n",
+    "            flow_file.write(\"\\n\")\n",
+    "            flow_file.write(f\"{single_indent}{single_indent}start_step = ProcessingStep(\\n\")\n",
+    "            flow_file.write(f\"{single_indent}{single_indent}{single_indent}name={step.name}\\n\")\n",
+    "            flow_file.write(f\"{single_indent}{single_indent}{single_indent}processor = script_processor\\n\")\n",
+    "            flow_file.write(f\"{single_indent}{single_indent}{single_indent}code = {fq_module_name}_{step.name}.py\\n\") \n",
+    "            flow_file.write(f\"{single_indent}{single_indent})\\n\")\n",
+    "        else:\n",
+    "            # Trainign step\n",
+    "            pass\n",
+    "        flow_file.write(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def write_track_capture(flow_file):\n",
+    "    flow_file.write(\n",
+    "        f\"\"\"\n",
+    "        for key in results.keys():\n",
+    "            if key in self.__dict__:\n",
+    "                self.__dict__[key] = self.__dict__[key] + results[key]\n",
+    "            else:\n",
+    "                self.__dict__[key] = results[key]\n",
+    "\n",
+    "\"\"\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted test_clustering.ipynb to TestClusteringPipeline in: test_clustering.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_to_sagemaker_pipeline(nb_path, flow_path, silent=False, track_experiment=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
