--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -343,7 +343,7 @@
     "            write_script_processor(flow_file)\n",
     "            \n",
     "            flow_file.write(\"\\n\")\n",
-    "            flow_file.write(f\"{single_indent}{single_indent}start_step = ProcessingStep(\\n\")\n",
+    "            flow_file.write(f\"{single_indent}{single_indent}{step.name}_step = ProcessingStep(\\n\")\n",
     "            flow_file.write(f\"{single_indent}{single_indent}{single_indent}name={step.name}\\n\")\n",
     "            flow_file.write(f\"{single_indent}{single_indent}{single_indent}processor = script_processor\\n\")\n",
     "            flow_file.write(f\"{single_indent}{single_indent}{single_indent}code = {fq_module_name}_{step.name}.py\\n\") \n",
@@ -374,6 +374,267 @@
     "\n",
     "\"\"\"\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('something', ''),\n",
+       " ('preprocess', 'model_level,min_date,traffic_percent'),\n",
+       " ('fit', 'documents,workers'),\n",
+       " ('evaluate', 'model')]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(s.name, s.args) for s in steps]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "950"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "steps[-1].code.find('results = ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "def get_return_var_names(step):\n",
+    "    results_index = step.code.find('results =')\n",
+    "    if results_index == -1:\n",
+    "        return []\n",
+    "    return [l.split(':')[1].strip(', \\}') for l in step.code[results_index:].split('\\n') if l.strip().find(':') > -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "def something():\n",
+      "    print(\"The first step\")\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(steps[0].code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "def preprocess(model_level=None, min_date=None, traffic_percent=100):\n",
+      "    data = get_utterances(model_level, min_date, traffic_percent)\n",
+      "    documents = data.tolist()\n",
+      "    results = {\"documents\": documents}\n",
+      "    return results\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(steps[1].code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "def fit(documents, workers=workers):\n",
+      "    model = Topics(documents, workers=workers)\n",
+      "    results = {\"model\": model}\n",
+      "    return results\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(steps[2].code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[], ['documents'], ['model'], ['word_summaries', 'artifacts', 'metrics']]"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[get_return_var_names(s) for s in steps]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"word_summaries\": \"word_summaries\", \"artifacts\": \"artifacts\", \"metrics\": \"metrics\"}'"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.dumps({\"word_summaries\": \"word_summaries\",\"artifacts\": \"artifacts\",\"metrics\": \"metrics\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'word_summaries': 'word_summaries',\n",
+       " 'artifacts': 'artifacts',\n",
+       " 'metrics': 'metrics'}"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads('{\"word_summaries\": \"word_summaries\",\"artifacts\": \"artifacts\",\"metrics\": \"metrics\"}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "def get_sm_step_chain(steps):\n",
+    "    # if is processing step\n",
+    "    # determine processing inputs\n",
+    "    # determine processing outputs\n",
+    "    # pass params as job_arguments - if needed\n",
+    "    # args are either processinginputs - which can be returned from another step function or loaded from a training step\n",
+    "    # walk through steps?\n",
+    "        # for each step what do you need?\n",
+    "        # look at args\n",
+    "        # look at return vars\n",
+    "        # look at params\n",
+    "        # match by name\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3490766882.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [67]\u001b[0;36m\u001b[0m\n\u001b[0;31m    }\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "[\n",
+    "    ('something', ''),\n",
+    "    ('preprocess', 'model_level,min_date,traffic_percent', \n",
+    "     {\n",
+    "         'processing_outputs': ['documents'],\n",
+    "         'job_arguments:' ['model_level,min_date,traffic_percent']\n",
+    "     }\n",
+    "    ),\n",
+    "    ('fit', 'documents,workers',   \n",
+    "        {\n",
+    "          'training_inputs': ['documents'],\n",
+    "          ''\n",
+    "        }\n",
+    "    ),\n",
+    "    ('evaluate', 'model',   \n",
+    "     {\n",
+    "      'processing_inputs': ['fit_model'],\n",
+    "      'processing_outputs': ['word_summaries'],\n",
+    "     }\n",
+    "    )\n",
+    "]"
    ]
   },
   {
