[WIP] creating pipeline chain from steps

--- a/nbs/data_handler.ipynb
+++ b/nbs/data_handler.ipynb
@@ -227,7 +227,7 @@
     "                is_json_type=False,\n",
     "                persist_type=\"pickle\",\n",
     "                has_metaflow_param=True,\n",
-    "                has_sagemaker_param = True\n",
+    "                has_sagemaker_param=True,\n",
     "            )\n",
     "        elif any([isinstance(val, t) for t in supported_args]):\n",
     "            param_meta[key] = ParamMeta(\n",
@@ -236,7 +236,7 @@
     "                is_json_type=True,\n",
     "                persist_type=\"pickle\",\n",
     "                has_metaflow_param=True,\n",
-    "                has_sagemaker_param = False\n",
+    "                has_sagemaker_param=False,\n",
     "            )\n",
     "        elif any([isinstance(val, t) for t in supported_conversion_args]):\n",
     "            if isinstance(val, np.ndarray):\n",
@@ -246,7 +246,7 @@
     "                    is_json_type=False,\n",
     "                    persist_type=\"numpy\",\n",
     "                    has_metaflow_param=False,\n",
-    "                    has_sagemaker_param = False\n",
+    "                    has_sagemaker_param=False,\n",
     "                )\n",
     "            elif isinstance(val, pd.Series) or isinstance(val, pd.DataFrame):\n",
     "                param_meta[key] = ParamMeta(\n",
@@ -255,7 +255,7 @@
     "                    is_json_type=False,\n",
     "                    persist_type=\"pandas\",\n",
     "                    has_metaflow_param=False,\n",
-    "                    has_sagemaker_param = False\n",
+    "                    has_sagemaker_param=False,\n",
     "                )\n",
     "            elif isinstance(val, Path):\n",
     "                param_meta[key] = ParamMeta(\n",
@@ -264,7 +264,7 @@
     "                    is_json_type=False,\n",
     "                    persist_type=\"pickle\",\n",
     "                    has_metaflow_param=True,\n",
-    "                    has_sagemaker_param = False\n",
+    "                    has_sagemaker_param=False,\n",
     "                )\n",
     "        else:\n",
     "            param_meta[key] = ParamMeta(\n",
@@ -273,7 +273,7 @@
     "                is_json_type=False,\n",
     "                persist_type=\"unsupported\",\n",
     "                has_metaflow_param=False,\n",
-    "                has_sagemaker_param = False\n",
+    "                has_sagemaker_param=False,\n",
     "            )\n",
     "    return param_meta"
    ]
@@ -333,12 +333,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(param_meta[\"int_param\"].has_metaflow_param)\n",
-    "assert(param_meta[\"int_param\"].has_sagemaker_param)\n",
-    "assert(param_meta[\"str_param\"].has_metaflow_param)\n",
-    "assert(param_meta[\"str_param\"].has_sagemaker_param)\n",
-    "assert(param_meta[\"float_param\"].has_metaflow_param)\n",
-    "assert(param_meta[\"float_param\"].has_sagemaker_param)"
+    "assert param_meta[\"int_param\"].has_metaflow_param\n",
+    "assert param_meta[\"int_param\"].has_sagemaker_param\n",
+    "assert param_meta[\"str_param\"].has_metaflow_param\n",
+    "assert param_meta[\"str_param\"].has_sagemaker_param\n",
+    "assert param_meta[\"float_param\"].has_metaflow_param\n",
+    "assert param_meta[\"float_param\"].has_sagemaker_param"
    ]
   },
   {
@@ -347,12 +347,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(param_meta[\"list_param\"].has_metaflow_param)\n",
-    "assert(not param_meta[\"list_param\"].has_sagemaker_param)\n",
-    "assert(param_meta[\"dict_param\"].has_metaflow_param)\n",
-    "assert(not param_meta[\"dict_param\"].has_sagemaker_param)\n",
-    "assert(param_meta[\"input_path\"].has_metaflow_param)\n",
-    "assert(not param_meta[\"input_path\"].has_sagemaker_param)"
+    "assert param_meta[\"list_param\"].has_metaflow_param\n",
+    "assert not param_meta[\"list_param\"].has_sagemaker_param\n",
+    "assert param_meta[\"dict_param\"].has_metaflow_param\n",
+    "assert not param_meta[\"dict_param\"].has_sagemaker_param\n",
+    "assert param_meta[\"input_path\"].has_metaflow_param\n",
+    "assert not param_meta[\"input_path\"].has_sagemaker_param"
    ]
   },
   {
@@ -395,7 +395,6 @@
   }
  ],
  "metadata": {
-  "instance_type": "ml.m5d.xlarge",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
