[WIP] dag steps generation

--- a/nbs/test/test_clustering.ipynb
+++ b/nbs/test/test_clustering.ipynb
@@ -59,7 +59,14 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from sciflow.utils import lib_path"
+    "# TODO bring back in library calls\n",
+    "# from sciflow.utils import lib_path\n",
+    "\n",
+    "from nbqa.find_root import find_project_root\n",
+    "def lib_path(*lib_relative_path):\n",
+    "    lib_root_path = find_project_root(srcs=(str(Path(\".\").resolve()),))\n",
+    "    return Path(os.path.join(lib_root_path, *lib_relative_path))\n",
+    "# TODO remove above code ^ ; bring back in library calls"
    ]
   },
   {
