--- a/nbs/data_handler.ipynb
+++ b/nbs/data_handler.ipynb
@@ -395,6 +395,7 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
